// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render disabled next link if current page is last page 1`] = `
<section>
  <p>
    Test
  </p>
  <nav
    class="pagination"
  >
    <div
      class="control"
    >
      <span
        class="display"
      >
        Page: 5 of 5
      </span>
      <button
        class="previous"
      >
        <span
          aria-label="angle-left"
          class="fa fa-angle-left"
        />
      </button>
      <button
        class="next"
        disabled=""
      >
        <span
          aria-label="angle-right"
          class="fa fa-angle-right"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render disabled previous link current page is first page 1`] = `
<section>
  <p>
    Test
  </p>
  <nav
    class="pagination"
  >
    <div
      class="control"
    >
      <span
        class="display"
      >
        Page: 1 of 5
      </span>
      <button
        class="previous"
        disabled=""
      >
        <span
          aria-label="angle-left"
          class="fa fa-angle-left"
        />
      </button>
      <button
        class="next"
      >
        <span
          aria-label="angle-right"
          class="fa fa-angle-right"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render pagination with children 1`] = `
<section>
  <p>
    Test
  </p>
  <nav
    class="pagination"
  >
    <div
      class="control"
    >
      <span
        class="display"
      >
        Page: 5 of 10
      </span>
      <button
        class="previous"
      >
        <span
          aria-label="angle-left"
          class="fa fa-angle-left"
        />
      </button>
      <button
        class="next"
      >
        <span
          aria-label="angle-right"
          class="fa fa-angle-right"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render pagination with page numbers 1`] = `
<section>
  <p>
    Test
  </p>
  <nav
    class="pagination"
  >
    <div
      class="control"
    >
      <span
        class="display"
      >
        Page: 5 of 10
      </span>
      <button
        class="previous"
      >
        <span
          aria-label="angle-left"
          class="fa fa-angle-left"
        />
      </button>
      <button
        class="next"
      >
        <span
          aria-label="angle-right"
          class="fa fa-angle-right"
        />
      </button>
    </div>
  </nav>
</section>
`;
